cmake_minimum_required(VERSION 3.12)
project(TCPClientAndServer)

if (NOT BOOST_DIR)
    if (NOT ASIO_DIR)
        message(FATAL_ERROR "You must set ASIO_DIR in order to build the project")
    endif()
    if (NOT BOOST_SYSTEM_DIR)
        message(FATAL_ERROR "You must set BOOST_SYSTEM_DIR in order to build the project")
    endif()
endif()
find_package(Threads REQUIRED)
add_executable(TCPClientAndServer main.cpp)
if (BOOST_DIR)
    target_include_directories(TCPClientAndServer PRIVATE ${BOOST_DIR})
else()
    target_include_directories(TCPClientAndServer PRIVATE ${ASIO_DIR}/include ${BOOST_SYSTEM_DIR}/include)
endif()
target_compile_definitions(TCPClientAndServer PRIVATE BOOST_ERROR_CODE_HEADER_ONLY)
target_link_libraries(TCPClientAndServer Threads::Threads)
set_target_properties(TCPClientAndServer PROPERTIES
        CXX_STANDARD 17
        CXX_STANDARD_REQUIRED YES)
